# blacktip

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODEBASE_ANALYSIS.md  DATABASE_MIGRATION.md  DEVICE_STATE_MONITORING.md  IMPLEMENTATION_SUMMARY.md  PACKAGING.md  QUICKSTART.md  QUICKSTART_STATE_TRACKING.md  README.md  RESERVED_IP_FIX.md  SERVICE_INTEGRATION.md  STATE_TRACKING_SUMMARY.md  SYSTEMD_SETUP.md  blacktip.service  check_dependencies.py  cleanup_duplicate_macs.py  debug_mac_cache.sh  debug_mac_lookup.py  deploy.sh  diagnose-web.sh  example_active_probing.py  find_mac_vendor_module.py  fix-git.sh  inspect_oui_file.py  install-service-with-frontend.sh  install-service.sh  manual_update_vendors.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  reset-permissions.sh  setup.py  start-state-monitor.sh  test_reserved_ip_protection.py  test_update_vendors.py  test_with_cache.py  uninstall-service-with-frontend.sh  (+1 more)
docs/: PRODUCTION_DEPLOYMENT.md  SPEEDTEST_SETUP.md
examples/: db_tool.py  test_db.py  web_example.py
scripts/: init_speedtest_thresholds.py  verify_nmap_scripts.sh
src/blacktip/: __init__.py  blacktip.py
src/blacktip/cli/: entrypoints.py
src/blacktip/exceptions/: __init__.py
src/blacktip/utils/: active_probe.py  classifier.py  config.py  database.py  datafile.py  dns_resolver.py  exe.py  geo_lookup.py  logger.py  metrics.py  network_info.py  nmap_parser.py  security.py  sniffer.py  speedtest_service.py  state_monitor.py  validation.py
tests/: __init__.py  test_active_probe.py  test_sniffer.py  test_validation.py
web-frontend/: .env.example  DEPLOYMENT_QUICKSTART.md  PRODUCTION_DEPLOYMENT.md  README.md  app.py  blacktip-tmpfiles.conf  blacktip-web.service  create_test_db.py  fix-permissions.sh  gunicorn.conf.py  nginx-blacktip.conf  requirements.txt  run.sh
web-frontend/client/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web-frontend/client/src/: App.tsx  index.css
web-frontend/client/src/components/: DeviceDetailsDialog.tsx
web-frontend/client/src/components/layout/: Layout.tsx
web-frontend/client/src/hooks/: useDevices.ts  useStatistics.ts
web-frontend/client/src/lib/: utils.ts
web-frontend/client/src/pages/: Devices.tsx  SpeedTest.tsx  Timeline.tsx
web-frontend/client/src/services/: api.ts
web-frontend/client/src/types/: index.ts
web-frontend/static/css/: style.css
web-frontend/static/js/: app.js
web-frontend/templates/: index.html
